# tpmp-gr9a-lab4-nastya2x

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  autopark_app  cmake_install.cmake
.github/workflows/: build.yml
data/: autopark  autopark.sqlite  database.sql
docs/: _config.yml  database.md  glossary.md  index.md  presentation.md  project_links.md  requirements.md
includes/: admin_menu.h  auth.h  db.h  driver_menu.h
src/: admin_menu.cpp  auth.cpp  db.cpp  driver_menu.cpp  main.cpp
test/: admin_menu_test.cpp  auth_test.cpp  db_test.cpp  driver_menu_test.cpp
